# clawlight-firmware

./: Cargo.toml  LICENSE  README.md  partitions.csv
.cargo/: config.toml
docs/: esp32-flashing-runbook.md  esp32-led.md  esp32-serial-ota.md
scripts/: flash.sh
src/: main.rs
